# MagSysQt

./: MagSysQt.pro  main.cpp
Api/: CMakeLists.txt
Api/Kernel/: CMakeLists.txt
Moduls/: CMakeLists.txt  module_selector.cpp  module_selector.h
Moduls/Commander/: CMakeLists.txt
Moduls/Commander/include/: commandparser.h
Moduls/Commander/src/: commandparser.cpp
Moduls/MainWindow/: CMakeLists.txt
Moduls/MainWindow/Include/: mainwindow.h
Moduls/MainWindow/src/: mainwindow.cpp
Moduls/MainWindow/ui/: mainwindow.ui
Moduls/Printer/: CMakeLists.txt
Moduls/Printer/include/: cmd_data_base.h  gcode_generator.h  printer.h  printer_worker.h
Moduls/Printer/src/: printer.cpp  printer_worker.cpp
Moduls/STLObjectMeasurement/: positionfilereader.cpp  positionfilereader.h  stlobjectmeasurement.cpp  stlobjectmeasurement.h  stlobjectmeasurementworker.cpp  stlobjectmeasurementworker.h
Moduls/Scatter/include/: scatter.h
Moduls/Scatter/src/: scatter.cpp
Moduls/Sensor/: CMakeLists.txt
Moduls/Sensor/include/: scpi.h  sensor.h  sensorworker.h  visa_device.cpp  visa_device.h  visa_resource_manager.cpp  visa_resource_manager.h
Moduls/Sensor/src/: sensor.cpp  sensor_worker.cpp
Moduls/Serial/: CMakeLists.txt
Moduls/Serial/include/: serial_constants.h  serial_port_reader.h  serial_settings.h  serial_settings_ini.h  visa_settings.h  visa_settings_ini.h
Moduls/Serial/src/: serial_settings_ini.cpp  visa_settings_ini.cpp
Utils/: CMakeLists.txt
Utils/include/: command.h  module.h  position.h
